--- a/src/styles/backgrounds.module.scss
+++ b/src/styles/backgrounds.module.scss
@@ -1,25 +1,22 @@
-.homeBG {
-  background-image: url('../assets/home/background-home-desktop.jpg');
+.bgSize {
   height: 100dvh;
   width: 100dvw;
+}
+
+.homeBG {
+  background-image: url('../assets/home/background-home-desktop.jpg');
 }
 
 .destinationBG {
   background-image: url('../assets/destination/background-destination-desktop.jpg');
-  height: 100dvh;
-  width: 100dvw;
 }
 
 .crewBG {
   background-image: url('../assets/crew/background-crew-desktop.jpg');
-  height: 100dvh;
-  width: 100dvw;
 }
 
 .technologyBG {
   background-image: url('../assets/technology/background-technology-desktop.jpg');
-  height: 100dvh;
-  width: 100dvw;
 }
 
 // tablet
