--- a/src/styles/backgrounds.module.scss
+++ b/src/styles/backgrounds.module.scss
@@ -1,7 +1,7 @@
 .bgSize {
   height: 100dvh;
   width: 100dvw;
-}
+};
 
 .homeBG {
   background-image: url('../assets/home/background-home-desktop.jpg');
