finished nav bar

--- a/src/styles/_variables.module.scss
+++ b/src/styles/_variables.module.scss
@@ -18,9 +18,9 @@ $subheading1-font-size: 1.75rem; // 28px
 $subheading2-font-size: .875rem; // 14px
 
 // Letter spacing
-$heading5-char-space: 4.75;
-$subheading2-char-space: 2.35;
-$nav-char-space: 2.7;
+$heading5-char-space: 4.75px;
+$subheading2-char-space: 2.35px;
+$nav-char-space: 2.7px;
 
 // Export variables
 :export {
