--- a/src/styles/_variables.module.scss
+++ b/src/styles/_variables.module.scss
@@ -1,11 +1,12 @@
 // Font colors
-$primary-color: #FFFFFF;
-$secondary-color: #D0D6F9;
-$tertiary-color: #0B0D17;
+$primary-color: #ffffff;
+$secondary-color: #d0d6f9;
+$tertiary-color: #0b0d17;
 
 // Font family
-$primary-font: 'Barlow Condensed', sans-serif;
-$secondary-font: 'Bellefair', serif;
+$primary-font: "Barlow Condensed", sans-serif;
+$secondary-font: "Bellefair", serif;
+$content-font: "Barlow", sans-serif;
 
 // Font size
 $primary-font-size: 1rem; // 16px
@@ -15,32 +16,40 @@ $heading3-font-size: 3.5rem; // 56px
 $heading4-font-size: 2rem; // 32px
 $heading5-font-size: 1.75rem; // 28px
 $subheading1-font-size: 1.75rem; // 28px
-$subheading2-font-size: .875rem; // 14px
+$subheading2-font-size: 0.875rem; // 14px
+$content-font-size: 1.125rem; // 18px
 
 // Letter spacing
 $heading5-char-space: 4.75px;
 $subheading2-char-space: 2.35px;
 $nav-char-space: 2.7px;
 
+// Line height
+$content-line-height: 32px;
+
 // Export variables
 :export {
-  primary-color: $primary-color;
-  secondary-color: $secondary-color;
-  tertiary-color: $tertiary-color;
+	primary-color: $primary-color;
+	secondary-color: $secondary-color;
+	tertiary-color: $tertiary-color;
 
-  primary-font: $primary-font;
-  secondary-font: $secondary-font;
+	primary-font: $primary-font;
+	secondary-font: $secondary-font;
+	content-font: $content-font;
 
-  primary-font-size: $primary-font-size;
-  heading1-font-size: $heading1-font-size;
-  heading2-font-size: $heading2-font-size;
-  heading3-font-size: $heading3-font-size;
-  heading4-font-size: $heading4-font-size;
-  heading5-font-size: $heading5-font-size;
-  subheading1-font-size: $subheading1-font-size;
-  subheading2-font-size: $subheading2-font-size;
+	primary-font-size: $primary-font-size;
+	heading1-font-size: $heading1-font-size;
+	heading2-font-size: $heading2-font-size;
+	heading3-font-size: $heading3-font-size;
+	heading4-font-size: $heading4-font-size;
+	heading5-font-size: $heading5-font-size;
+	subheading1-font-size: $subheading1-font-size;
+	subheading2-font-size: $subheading2-font-size;
+	content-font-size: $content-font-size;
 
-  heading5-char-space: $heading5-char-space;
-  subheading2-char-space: $subheading2-char-space;
-  nav-char-space: $nav-char-space;
-};
+	heading5-char-space: $heading5-char-space;
+	subheading2-char-space: $subheading2-char-space;
+	nav-char-space: $nav-char-space;
+
+	content-line-height: $content-line-height;
+}
